--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
       "react/jsx-filename-extension": "off",
       "react/react-in-jsx-scope": "off",
       "import/extensions": "off",
+      "import/prefer-default-export": "off",
       "import/no-unresolved": "off",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn"
