--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,3 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb",
-        "plugin:react-hooks/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "@typescript-eslint",
-        "react-hooks"
-    ],
-    "rules": {
-      "react/jsx-filename-extension": "off",
-      "react/react-in-jsx-scope": "off",
-      "import/extensions": "off",
-      "import/prefer-default-export": "off",
-      "import/no-unresolved": "off",
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn"
-    }
+  "extends": "@rocketseat/eslint-config/react"
 }
